--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body>         
+
+
     <div id="root"></div>
-    <script src="App.js"></script>
+    
+    <script type="module" src="App.js"></script>
 </body>
 </html>
